# IUT-CS-Client

./: CMakeLists.txt  IUT-Client-Serveur-Client.CSharp.csproj  IUT-Client-Serveur-Client.sln  README.md  main.cpp
Assets/Prefabs/: Case.prefab
Assets/Scenes/: main.unity
Assets/Scripts/: MainScript.cs
Morpion - Windows Build/MNO_Data/: PlayerConnectionConfigFile  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets  sharedassets0.assets.resS
Morpion - Windows Build/MNO_Data/Managed/: Assembly-CSharp.dll.mdb  mscorlib.dll.mdb
ProjectSettings/: ProjectSettings.asset  TagManager.asset
